--- a/templates/index.html
+++ b/templates/index.html
@@ -37,8 +37,8 @@
                 
                 <td><center>{{reval.Internal_marks}}</center></td>
                 <td><center>{{reval.External_marks}}</center></td>
-                <td id="name"><center>c</center></td>
-                <td><center>2</center></td>
+                <td id="name"><center>{{reval.Grades}}</center></td>
+                <td><center>{{reval.Credits}}</center></td>
                 <td>
                     <input type="number" placeholder="Marks......" name="s_eval[]" value=1>
                 </td>
