--- a/templates/final.html
+++ b/templates/final.html
@@ -6,6 +6,15 @@
         <link rel="stylesheet" href="{% static 'print.css' %}">
     </head>
     <body>
+        <div class="container">
+            <div class="image">
+                <img src="{% static 'assets/jntugv.png' %}" alt="College Logo" style="width: 5%;height: 5%;">
+            </div>
+            <div class="text">
+                <center><h1>JNTU-GV COLLEGE OF ENGINEERING VIZIANAGARAM(AUTONOMOUS)</h1></center>
+                <center><h1>JAWAHARLAL NEHRU TECHNOLOGICAL UNIVERSITY GURAJADA VIZIANAGARAM</h1></center>
+            </div>
+          </div>
         <table style="width: 100%;">
             <tr>
                 <th>S.No</th>
