--- a/static/st.css
+++ b/static/st.css
@@ -24,3 +24,46 @@ input::-webkit-inner-spin-button {
 th#head{
     padding: 5px 5px;
 }
+.danger {
+    background-color: #f2dede;
+    color: #a94442;
+  }
+  body{
+    background-image: url('background(1).png');
+    background-attachment: fixed;
+    background-size: 100% 100%;
+}
+
+input[type="file"]{
+    display: none;
+}
+
+.button {
+    background-color: #78A8DA; /* Green */
+    border: aliceblue;
+    color: white;
+    padding: 10px;
+    font-size: 10px;
+    margin-left: 770px;
+    width: 4%;
+    height: 3%;
+}
+
+.submit {border-radius: 20%;}
+.container {
+    align-items: center;
+    justify-content: center;
+  }
+  
+  img {
+    max-width: 25%;
+    max-height:15%;
+    float: left;
+  }
+  
+  .text {
+    font-size: 10px;
+    padding-left: 20px;
+    padding-top: 3px;
+    float: inline-end;
+  }
