--- a/templates/final.html
+++ b/templates/final.html
@@ -25,7 +25,7 @@
                 <th>Grades</th>
                 <th>Revaluation Status</th>
             </tr>
-            {% for reval in Revaluation %}
+            {% for reval in Revaluation_copy %}
             
                 <input type="hidden" name="id[]" value="{{reval.id}}" />
             <tr>
