--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
                 </td>
                 
                 <td>
-                    <input type="number" placeholder="Marks......" name="t_eval[]" value={{reval.Third_evaluation}}>
+                    <input type="number" placeholder="Marks......" name="t_eval[]" value=0>
                 </td>
             </tr>
             {% endfor %}
