--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,25 @@
 
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'st.css' %}">
+    
     <body>
+        {% if status == 0 %}  
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <strong>{% if message %}<p>{{ message }}</p>{% endif %}</strong> 
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        {% endif %}
 
         <div class="container">
             <div class="image">
                 <img src="{% static 'assets/jntugv.png' %}" alt="College Logo" style="width: 5%;height: 5%;">
             </div>
             <div class="text">
-                <center><h1>JNTU-GV COLLEGE OF ENGINEERING VIZIANAGARAM(AUTONOMOUS)</h1></center>
-                <center><h1>JAWAHARLAL NEHRU TECHNOLOGICAL UNIVERSITY GURAJADA VIZIANAGARAM</h1></center>
+                <center><h3>JNTU-GV COLLEGE OF ENGINEERING VIZIANAGARAM(AUTONOMOUS)</h3></center>
+                <center><h3>JAWAHARLAL NEHRU TECHNOLOGICAL UNIVERSITY GURAJADA VIZIANAGARAM</h3></center>
             </div>
           </div>
 
