--- a/templates/home.html
+++ b/templates/home.html
@@ -29,9 +29,9 @@
                     </select>
                 </div>
             
-            <input type="file" id="uploadresBtn" name="files">
+            <input type="file" id="uploadresBtn" name="file2">
             <h5>Result file</h5>
-            <label for="uploadBtn"><img src="{% static 'assets/upload.png' %}" alt="Upload Image" id="upload" style="width:70px;height:75px;"></label>
+            <label for="uploadresBtn"><img src="{% static 'assets/upload.png' %}" alt="Upload Image" id="uploadres" style="width:70px;height:75px;"></label>
             
 
             <input type="file" id="uploadBtn" name="file">
